3252
Additional information in Scala 2.9.0.r24145-b20110130020134 for the last example:

{code}
scala> def f(implicit a: Manifest[{def g: Unit}]) = a
f: (implicit a: scala.reflect.Manifest[AnyRef{def g: Unit}])scala.reflect.Manifest[AnyRef{def g: Unit}]

scala> f
<console>:8: error: type mismatch;
 found   : scala.reflect.Manifest[java.lang.Object]
 required: scala.reflect.Manifest[AnyRef{def g: Unit}]
Note: java.lang.Object >: AnyRef{def g: Unit}, but trait Manifest is invariant in type T.
You may wish to investigate a wildcard type such as `_ >: AnyRef{def g: Unit}`. (SLS 3.2.10)
       f
       ^
{code}
